--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Home"
+    url: /
+  - title: "Cryptography"
+    url: /cryptography/
+  - title: "Error-Correcting Codes"
+    url: /ecc/
   - title: "About"
     url: /about/
