--- a/_config.yml
+++ b/_config.yml
@@ -54,18 +54,19 @@ footer:
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/YOUR-LINKEDIN"
 
+# Collections
+collections:
+  pages:
+    output: true
+
 # Defaults
 defaults:
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: false
-      share: true
-      related: true
 
   - scope:
       path: "_pages"
