--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ twitter_username: sabiraelk
 github_username: sabiraelkhalfaoui
 minimal_mistakes_skin: default
 search: true
+title_separator: "|"
 
 # Build settings
 markdown: kramdown
@@ -63,13 +64,6 @@ collections:
 defaults:
   - scope:
       path: ""
-      type: pages
-    values:
-      layout: single
-      author_profile: true
-
-  - scope:
-      path: "_pages"
       type: pages
     values:
       layout: single
